[gd_scene load_steps=9 format=3 uid="uid://c64bieuy8lb7o"]

[ext_resource type="Script" uid="uid://chi32da3puvgl" path="res://scripts/BoilingGame.gd" id="1_u1vtd"]
[ext_resource type="PackedScene" uid="uid://cvct50b2wta71" path="res://prefabs/inventory.tscn" id="1_vldwm"]
[ext_resource type="Texture2D" uid="uid://wvshufgj10rk" path="res://assets/kitchen/cooking_base.png" id="2_dx4x7"]
[ext_resource type="PackedScene" uid="uid://dbwh0kdfxyriq" path="res://prefabs/BoilingPot.tscn" id="3_fq58d"]
[ext_resource type="PackedScene" uid="uid://chy7upl30otxo" path="res://prefabs/GameResult.tscn" id="4_1bt8b"]
[ext_resource type="PackedScene" uid="uid://dyb2v3rqxy7a0" path="res://prefabs/CookFlame.tscn" id="4_5afu6"]
[ext_resource type="PackedScene" uid="uid://c5xv1lgcblkbs" path="res://prefabs/Countdown.tscn" id="5_kwa6b"]
[ext_resource type="AudioStream" uid="uid://bugrabcmx17dg" path="res://audio/sfx/boiling.mp3" id="8_w03wc"]

[node name="BoilingGame" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_u1vtd")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(576, 324)
texture = ExtResource("2_dx4x7")

[node name="BoilingPot" parent="." instance=ExtResource("3_fq58d")]
position = Vector2(576, 324)

[node name="Flame" parent="." instance=ExtResource("4_5afu6")]
position = Vector2(576, 324)

[node name="Title" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 30
text = "Keep temperature steady!"

[node name="Subtitle" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -55.0
offset_top = 50.0
offset_right = 55.0
offset_bottom = 78.0
grow_horizontal = 2
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 20
text = "Hold Space to increase temperature, release to decrease temperature"

[node name="Inventory" parent="." instance=ExtResource("1_vldwm")]
visible = false
layout_mode = 1
anchors_preset = 4
anchor_left = 0.0
anchor_right = 0.0
offset_left = 0.0
offset_right = 365.0
grow_horizontal = 1

[node name="ViewIngredients" type="Button" parent="."]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
text = "View Ingredients"

[node name="StartButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -23.0
offset_right = 23.0
offset_bottom = 31.0
grow_horizontal = 2
text = "Start"

[node name="GameResult" parent="." instance=ExtResource("4_1bt8b")]
visible = false
layout_mode = 1

[node name="Countdown" parent="." instance=ExtResource("5_kwa6b")]
visible = false
layout_mode = 1

[node name="BackButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -8.0
offset_bottom = 8.0
grow_horizontal = 0
text = "Back"

[node name="BoilingSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_w03wc")
volume_db = 5.0
